--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 body {
     font-family: "Open Sans", sans-serif;
     color: #444444;
@@ -671,11 +677,19 @@ section {
     color: #fff;
 }
 
-/*--------------------------------------------------------------
-# Sign Up
---------------------------------------------------------------*/
+#main {
+    display: table;
+    height: 100%;
+    margin: 0 auto;
+}
+
+.center-form {
+    display: table-cell;
+    vertical-align: middle;
+}
+
 .signup {
-    padding-top: 230px;
+    width: 660px;
 }
 
 .signup .container {
@@ -759,6 +773,10 @@ section {
     margin-top: 10px;
 }
 
+.signup .signup-form button[type="submit"]:hover {
+    background: #1c84e3;
+}
+
 @media (max-width: 414px) {
     .signup .signup-form button[type="submit"] {
         width: 100%;
@@ -767,6 +785,8 @@ section {
     }
 }
 
-.signup .signup-form button[type="submit"]:hover {
-    background: #1c84e3;
+@media (max-width: 375px) {
+    .signup .container:nth-child(1) {
+        margin-top: 60px;
+    }
 }
