Transitioned to Single Page Application.

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -22,6 +22,10 @@ h1, h2, h3, h4, h5, h6 {
     font-family: "Raleway", sans-serif;
 }
 
+#app {
+    height: 100%;
+}
+
 #topbar {
     background: #fff;
     height: 40px;
